<?xml version="1.0" encoding="utf-8"?>

<!--
*@file strings.xml
*@brief List of strings to be dispalyed on the UI
*
*Copyright (c) 2009-2011, 2013, 2014 Qualcomm Technologies, Inc.
* All Rights Reserved. Qualcomm Technologies Proprietary and Confidential.
-->

<resources>
    <string name="app_name">qualcomm_settings</string>

    <!-- DIAG settings -->
    <string name="diag_title">On-Device Logging</string>
    <string name="diag_enabled">Enabled</string>
    <string name="diag_disabled">Disabled</string>
    <string name="diag_summary">Redirect DIAG traffic to Memory Device on Phone</string>


    <!-- power management settings -->
    <string name="stay_on_plugged_title">Stay On Plugged</string>
    <string name="stay_on_plugged_summary">Screen will be on during charging</string>

    <!--Screen Settings -->
    <string name="dim_screen_title">Dim Screen</string>
    <string name="dim_screen_summary">Screen will be Dim</string>

    <string name="spdif_device_title">SPDIF Device</string>
    <string name="spdif_device_summary">Enable SPDIF Device</string>

    <string name="QualcommSettings">Qualcomm Settings</string>

    <!-- Voice Call Auto Answer Settings -->
    <string name="auto_answer_title">Voice Call Auto Answer</string>
    <string name="auto_answer_summary">Set voice call auto answer timeout</string>
    <string name="auto_answer_default">-1</string>

    <!-- Go Dormant -->
    <string name="go_dormant_title">Data Call Go Dormant</string>
    <string name="go_dormant_summary">Set data call to dormant mode</string>

    <!-- Usb Mass Storage Settings -->
    <string name="usb_mass_storage_title">USB Mass Storage</string>
    <string name="usb_mass_storage_summary">Enable/Disable USB Mass Storage</string>

    <!-- Usb Remote Wakeup Settings -->
    <string name="usb_remote_wakeup_title">USB Remote Wakeup</string>
    <string name="usb_remote_wakeup_summary">Enable/Disable USB Remote Wakeup</string>

    <!-- SD Polling Settings -->
    <string name="sd_poll_title">SD Polling</string>
    <string name="sd_poll_summary">Enable/Disable SD Polling</string>

    <!-- ANC Settings -->
    <string name="anc_title">ANC</string>
    <string name="anc_summary">Enable/Disable ANC during call</string>

    <!-- Device/HDMI speakers Settings -->
    <string name="disable_hdmi_audio_output_title">Disable HDMI Audio Output</string>
    <string name="disable_hdmi_audio_output_summary">Disable/Enable Disable HDMI Audio Output</string>

    <!-- Sensors Settings -->
    <string name="sensors_title">Sensors</string>
    <string name="sensors_summary">Enable/Disable Sensors</string>

    <!-- Camera Gestures Settings -->
    <string name="gestures_title">Camera Gestures</string>
    <string name="touch_injection_title">Gestures Touch Injection</string>
    <string name="touch_injection_summary">Enable/Disable Touch Injection</string>

    <!-- USB Hub Settings -->
    <string name="usb_hub_title">Fusion USB Hub</string>
    <string name="usb_hub_summary">Enable/Disable USB Tethering/DUN</string>

    <!-- USB composition settings -->
    <string name="usb_composition_title">USB Composition</string>
    <string name="usb_composition_summary">Select required USB Composition</string>
    <string name="usb_composition_default">9017</string>

    <!-- CABL settings -->
    <string name="cabl_settings_title">Content Adaptive Backlight Options</string>
    <string name="cabl_settings_summary">Adjust the Backlight based on the screen contents</string>

    <!-- SVI settings -->
    <string name="svi_settings_title">Sunlight Visibility Improvement Options</string>
    <string name="svi_settings_summary">Enhance viewing experience base on ambient light conditions</string>

    <!-- AD settings -->
    <string name="ad_settings_title">Assertive Display Options</string>
    <string name="ad_settings_summary">Enhance viewing based on the ambient condition</string>

    <!-- PP settings -->
    <string name="pp_settings_title">Picture Attributes</string>
    <string name="pp_settings_summary">Adjust HSIC values</string>

    <!-- USB OTG Mode settings -->
    <string name="usb_otg_mode_title">OTG Mode</string>
    <string name="usb_otg_mode_summary">Select required OTG Mode</string>
    <string name="usb_otg_mode_default">peripheral</string>

    <!-- DATA USAGE settings -->
    <string name="data_usage_title">Data Usage</string>
    <string name="data_usage_summary">Select the Data Limit</string>
    <string name="data_usage_txt_name">Set Data Limit</string>
    <string name="data_usage_txtview_note">Note: You need to restart the device after setting the data limit</string>
    <string name="data_usage_edit_txt_value">EDIT</string>
    <string name="data_usage_button_ok">Ok</string>
    <string name="data_usage_button_cancel">Cancel</string>

    <!-- Data Monitor Settings -->
    <string name="data_monitor_title">Data Monitor</string>
    <string name="data_monitor_summary">Enable/Disable Data Monitor</string>

    <!-- UI setting to display the mass storage data in the desired file browser when device is mounted -->
    <string name="storage_device_settings_title">File manager settings</string>
    <string name="view_storage_title">File Manager</string>
    <string name="view_storage_summary">Select default file manager from installed packages</string>
    <string name="file_browser_packages_list">Available packages </string>

    <string name="default_file_manager_title">Default file manager</string>
    <string name="default_file_manager_summary">Default file manager</string>

    <string name="auto_answer_timeout_title">Auto answer timeout</string>
    <string name="auto_answer_timeout_summary">Auto answer timeout</string>

    <!--  CDMA Subscription Source Settings -->
    <string name="set_cdma_sub_src_title">Set CDMA Subscription</string>
    <string name="set_cdma_sub_src_summary">Change between RUIM/SIM, NV and Use RUIM if available</string>
    <string name="cdma_sub_src_ruim_sim">RUIM/SIM</string>
    <string name="cdma_sub_src_nv">NV</string>
    <string name="cdma_sub_src_ruim_if_avail">Use RUIM if available</string>
    <string name="enter_spc">SPC: </string>
    <string name="cdma_sub_src_button_ok">OK</string>
    <string name="cdma_sub_src_button_cancel">CANCEL</string>
    <string name="unable_to_change_cdma_sub_src">Unable to change CDMA Subscription</string>
    <string name="unable_to_change_alert_title">Failed</string>
    <string name="unable_to_change_button_ok">OK</string>

    <!-- CDMA Manual System Avoidance Settings-->
    <string name="cdma_nwk_avoidance_title">CDMA Manual System Avoidance</string>
    <string name="cdma_nwk_avoidance_summary">Avoid the current network, or clear the avoidance network list.</string>
    <string name="avoid_cur_nwk_title">Avoid the current network</string>
    <string name="avoid_cur_nwk_summary">Avoid the current network, and search for a new network.</string>
    <string name="view_nwk_list_title">View the avoidance network list</string>
    <string name="view_nwk_list_summary">Display the avoidance network list.</string>
    <string name="clear_nwk_list_title">Clear the avoidance network list</string>
    <string name="clear_nwk_list_summary">Clear all networks from the avoidance network list.</string>
    <string name="waiting_disable_data">Disabling data...</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Cancel</string>
    <string name="confirm_avoid">Are you sure you want to avoid the current network?</string>
    <string name="confirm_clear">Are you sure you want to clear the avoidance network list?</string>
    <string name="unable_to_disable_data">Unable to disable data.</string>
    <string name="avoid_cur_nwk_succeeded">Added the current network to the avoidance list.</string>
    <string name="avoid_cur_nwk_failed">Unable to add the current network to the avoidance list.</string>
    <string name="clear_nwk_list_succeeded">Cleared the avoidance network list.</string>
    <string name="clear_nwk_list_failed">Unable to clear the avoidance network list.</string>
    <string name="avoidance_list_title">Avoidance Network List</string>

    <!-- Voice Call Features-->
    <string name="voice_call_features_title">Voice Call Features</string>
    <string name="voice_call_features_summary">Enable/Disable fluence, slowtalk, incall music, etc.</string>
    <string name="incallmusic_title">Incall Music</string>
    <string name="incallmusic_summary">Enable/Disable Incall Music during call</string>
    <string name="fluence_title">Fluence</string>
    <string name="fluence_summary">Fluence</string>
    <string name="fluence_default">none</string>
    <string name="fluencemode_title">Fluence State</string>
    <string name="fluencemode_summary">Enable/Disable fluence</string>
    <string name="slowtalk_title">SlowTalk</string>
    <string name="slowtalk_summary">Enable/Disable slowtalk</string>
    <string name="devicemute_title">Device Mute</string>
    <string name="devicemute_summary">Enable/Disable device mute during a call</string>
    <string name="direction_title">Device Mute Direction</string>
    <string name="direction_summary">Set device mute direction i.e. Rx/Tx</string>
    <string name="hdvoice_title">HD Voice</string>
    <string name="hdvoice_summary">Enable/Disable HD Voice</string>

    <!--  MultiSim Settings -->
    <string name="multi_sim_settings_title">MultiSim Settings</string>
    <!--  Tune Away Receiver -->
    <string name="tune_away_receiver_title">Tune Away Receiver</string>
    <string name="tune_away_receiver_summary">Disabled</string>
    <string name="tune_away_receiver_enabled">Enabled</string>
    <string name="tune_away_receiver_disabled">Disabled</string>
    <!--  Priority Subscription Settings -->
    <string name="priority_subscription_title">Priority Subscription</string>
    <string name="priority_subscription_summary">Select Priority Subscription</string>

    <!--  NFC Advanced Settings -->
    <string name="nfc_default_route_setting_title">NFC Default Route Setting</string>
 </resources>
