<?xml version="1.0" encoding="utf-8"?>

<!--
*@file voice_call_features.xml
*@brief Lists of preferences used in the qualcommSettings UI.
*Copyright (c) 2014 Qualcomm Technologies, Inc.
*All Rights Reserved. Qualcomm Technologies Proprietary and Confidential.
-->

<PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android">

   <CheckBoxPreference
     android:key="incallmusic"
     android:title="@string/incallmusic_title"
     android:summary="@string/incallmusic_summary"
     android:defaultValue="false"/>

   <ListPreference
     android:key="fluence"
     android:title="@string/fluence_title"
     android:summary="@string/fluence_summary"
     android:entries="@array/fluence_values"
     android:entryValues="@array/fluence_values"
     android:defaultValue="@string/fluence_default"/>

   <CheckBoxPreference
     android:key="fluencemode"
     android:title="@string/fluencemode_title"
     android:summary="@string/fluencemode_summary"
     android:defaultValue="false"/>

   <CheckBoxPreference
     android:key="slowtalk"
     android:title="@string/slowtalk_title"
     android:summary="@string/slowtalk_summary"
     android:defaultValue="false"/>

   <CheckBoxPreference
     android:key="devicemute"
     android:title="@string/devicemute_title"
     android:summary="@string/devicemute_summary"
     android:defaultValue="false"/>

   <ListPreference
     android:key="direction"
     android:title="@string/direction_title"
     android:summary="@string/direction_summary"
     android:entries="@array/direction_values"
     android:entryValues="@array/direction_values"/>

   <CheckBoxPreference
     android:key="hdvoice"
     android:title="@string/hdvoice_title"
     android:summary="@string/hdvoice_summary"
     android:defaultValue="false"/>

</PreferenceScreen>
