<?xml version="1.0" encoding="utf-8"?>

<!--
*@file cdma_nwk_avoidance.xml
*@brief Lists of preferences used in the qtiSettings UI.
*Copyright (c) 2013 Qualcomm Technologies, Inc.
*All Rights Reserved. Qualcomm Technologies Proprietary and Confidential.
-->

<PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android">

   <Preference
     android:key="avoid_cur_nwk"
     android:title="@string/avoid_cur_nwk_title"
     android:summary="@string/avoid_cur_nwk_summary"/>

   <Preference
     android:key="view_nwk_list"
     android:title="@string/view_nwk_list_title"
     android:summary="@string/view_nwk_list_summary"/>

   <Preference
     android:key="clear_nwk_list"
     android:title="@string/clear_nwk_list_title"
     android:summary="@string/clear_nwk_list_summary"/>

</PreferenceScreen>
