<?xml version="1.0" encoding="utf-8"?>

<!--
*@file cdma_nwk_avoidance.xml
*@brief Lists of preferences used in the qualcommSettings UI.
*Copyright (c) 2013 Qualcomm Technologies, Inc.
*All Rights Reserved. Qualcomm Technologies Proprietary and Confidential.
-->

<PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
         android:key="tune_away_receiver"
         android:title="@string/tune_away_receiver_title"
         android:summary="@string/tune_away_receiver_summary"
         android:defaultValue="false"
         />
    <ListPreference
            android:key="priority_subscription"
            android:title="@string/priority_subscription_title"
            android:summary="@string/priority_subscription_summary"/>
</PreferenceScreen>
